# PLN-Trabalho-Final

./: README.md  a.ipynb  hp_opt.ipynb  inference.ipynb  main.ipynb  pyproject.toml  train(1).ipynb  train.ipynb
bertabaporu-large-uncased-multisentiment-portuguese/runs/Dec30_20-58-48_Dellahan/: events.out.tfevents.1735605733.Dellahan
bertabaporu-large-uncased-multisentiment-portuguese/runs/Dec30_23-48-20_Dellahan/: events.out.tfevents.1735613304.Dellahan
bertabaporu-large-uncased-multisentiment-portuguese/runs/Dec30_23-51-48_Dellahan/: events.out.tfevents.1735613512.Dellahan
bertabaporu-large-uncased-multisentiment-portuguese/runs/Dec30_23-54-28_Dellahan/: events.out.tfevents.1735613670.Dellahan
bertabaporu-large-uncased-multisentiment-portuguese/runs/Dec30_23-55-25_Dellahan/: events.out.tfevents.1735613727.Dellahan
bertabaporu-large-uncased-multisentiment-portuguese/runs/Dec30_23-56-27_Dellahan/: events.out.tfevents.1735613789.Dellahan
bertabaporu-large-uncased-multisentiment-portuguese/runs/Jan01_20-41-16_Dellahan/: events.out.tfevents.1735774878.Dellahan
wandb/: latest-run
wandb/run-20241230_214214-zxtyfjiy/: run-zxtyfjiy.wandb
wandb/run-20241230_214214-zxtyfjiy/files/: config.yaml  wandb-metadata.json
wandb/run-20241230_214624-pwdg50o7/files/: wandb-metadata.json
wandb/run-20241230_234825-wgi84o50/files/: wandb-metadata.json
wandb/run-20241230_235152-sg93i7wi/files/: wandb-metadata.json
wandb/run-20241230_235431-85wub2t5/files/: wandb-metadata.json
wandb/run-20241230_235528-t16jw2mc/files/: wandb-metadata.json
wandb/run-20250101_204119-b1xgq2n9/: run-b1xgq2n9.wandb
(+3 files in other folders)
