[tool.poetry]
name = "pln-trabalho-final"
version = "0.1.0"
description = ""
authors = ["Vítor Caruso <vitor.caruso@aprix.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"
pandas = "^2.2.3"
transformers = "^4.46.3"
nltk = "^3.9.1"
matplotlib = "^3.9.3"
ipykernel = "^6.29.5"
torch = {version = "^2.5.1+cpu", source = "pytorch_cpu"}
torchvision = {version = "^0.20.1+cpu", source = "pytorch_cpu"}
datasets = "^3.1.0"


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
